# chiwawa

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.production.yml
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/data/: google_auth.db
backend/docs/: API_SPEC.md  README.md  backend-ai-dto-design.md  google-auth-jwt-integration.md
backend/docs/api/: auth.md  memorial.md  reference.md
backend/docs/architecture/: backend.md
backend/docs/contracts/: ai-planning-dto.md
backend/docs/integration/: image-search-modal-backend-review.md
backend/docs/superpowers/plans/: 2026-07-14-backend-production-hardening.md
backend/docs/superpowers/specs/: 2026-07-14-backend-production-hardening-design.md
backend/scripts/: seed_memorial_demo.py
backend/sql/: 002_memorial_photos.sql
backend/src/chiwawa_backend/: config.py  dependencies.py  errors.py  exception_handlers.py  main.py  state.py
backend/src/chiwawa_backend/middleware/: __init__.py  early_upload.py  headers.py  request_security.py
backend/src/chiwawa_backend/routers/: __init__.py  assistant.py  auth.py  (+9 more)
backend/tests/: memorial_test_support.py  request_security_support.py  test_ai_planning_dto.py  test_ai_planning_invariants.py  test_ai_planning_recommendations_contract.py  test_ai_route_contract.py  test_api_docs.py  test_api_pipeline.py  test_auth_settings_injection.py  test_backend_hardening.py  test_command_idempotency.py  test_coordinate_invariants.py  test_cors.py  test_database_migrations.py  test_datetime_limits.py  test_error_mapping.py  test_geocode.py  test_google_auth.py  test_google_oauth_success.py  test_image_search_client.py  test_image_validation.py  test_jwt_auth.py  test_local_photo_store_security.py  test_member_photo_patch_semantics.py  test_memorial.py  test_memorial_demo_mode.py  test_memorial_phone_local.py  test_memorial_photo_recovery.py  test_memorial_photo_recovery_integrity.py  test_memorial_private_errors.py  test_memorial_storage.py  test_memorial_time_contract.py  test_memorial_upload_security.py  test_oauth_state.py  test_oauth_state_store.py  test_openapi_error_contract.py  test_packaging_and_ids.py  test_patch_schema_validation.py  test_patch_semantics.py  test_photo_place_uploads.py  (+16 more)
backend/tests/fixtures/: modal_plan_trip_with_recommendations.json
backend/typings/jwt/: __init__.pyi
(+376 files in other folders)
